DATE        AUTHOR      CHANGE
---------- -----------  --------------------------------------------------------
2003-02-20 allenb       Added isEqual method to Node interface.
                        Created test application to test combinations of
                        isEqual comparisons.
2003-02-07 nonchocoboy  Replaced Doozer-based build system with an SCons-based
                        build system.
2003-01-14 allenb       Added debug name member to the Node class.  This member
                        stores the string rep of the Node name but only
                        if CPPDOM_DEBUG is defined.  This member can REALLY
                        help when looking at cppdom code in a debugger.
2003-01-11 allenb       Refactoring exception class.
                        cppdom::Error now tracks a local description of the
                        error as well as the file and line number that the error
                        occured on.  There is a new macro that helps to
                        construct the Error class to throw.
                        Also fixed the attribute API to throw an exception when
                        passed an invalid attribute name.
                        NEW VERSION: 0.2.0
2003-01-11 allenb       Change NodeList type to std::vector instead of std::list
2003-01-11 allenb       Added flags for disabling indentation and/or newlines
                        in node and document saving.
2003-01-11 allenb       Added a simplified interface to cdata.  This new
                        interface allows basic cdata manipulation from the
                        parent element of the actual cdata node.
2003-01-10 allenb       Added an example that makes a tree from scratch.
                        Added node and doc constructors that take the name
                        of the new node.
2003-01-06 allenb       Added general project documentation in the form of
                        .dox files in the doc/dox directory.  Modified doxy